--- a/build.gradle
+++ b/build.gradle
@@ -44,4 +44,17 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile('org.projectlombok:lombok')
+    /*
+        spring-boot-starter-data-jpa
+        스프링 부트용 Spring Data Jpa 추상화 라이브러리
+        스프링 부트 버전에 맞춰 자동으로 JPA관련 라이브러리들의 버전 관리
+        
+        h2
+        인메모리 관계형 DB
+        별도 설치 필요없이 프로젝트 의존성만으로 관리 가능
+        메모리에서 실행되기 때문에 애플리케이션을 재시작할 때 마다 초기화된다는 점을 이용하여 테스트 용도로 많이 사용
+        JPA 테스트, 로컬환경에서 구동에서 사용 예정
+     */
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('com.h2database:h2')
 }
