--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.h2.console.enabled=true
 # 스프링 시큐리티 OAuth2.0
 spring.profiles.include=oauth
+# 세션 데이터베이스
+spring.session.store-type=jdbc
